fixed preconditioner knowndata

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.pqr linguist-detectable=false
 *.face linguist-detectable=false
 *.vert linguist-detectable=false
+*.dat linguist-detectable=false
