--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ code/*
 !code/Main_BornIon.py
 !code/Main_BornIon_Reg.py
 !code/Main_Molecule.py
+!code/Main.py
 !code/run_simulations.bash
 !code/Allclean
 
