--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ meshio = "5.3.4"
 gmsh = "4.11.1"
 bempp-cl = "0.3.0"
 pygamer = "2.0.7"
+pdb2pqr = "3.6.2"
 xlsxwriter = "^3.1.9"
 
 [build-system]
