--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,26 +9,27 @@ repository = "https://github.com/MartinAchondo/XPINN-for-PBE-Simulation"
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-numpy = "1.24.3"
+numpy = "1.21.0"
 tensorflow = "2.10.0"
 tensorflow-io-gcs-filesystem = "0.31.0"
-trimesh = "3.23.5"
 scipy = "1.10.1"
+trimesh = "3.23.5"
+pygamer = "2.0.7"
 matplotlib = "3.6.1"
 plotly = "5.14.1"
 pandas = "2.0.2"
+xlsxwriter = "^3.1.9"
 tqdm = "4.64.1"
-rtree = "1.0.1"
 ipykernel = "6.16.0"
 pydot = "^1.4.2"
 pydotplus = "^2.0.2"
+rtree = "1.0.1"
 numba = "0.57.0"
 meshio = "5.3.4"
 gmsh = "4.11.1"
 bempp-cl = "0.3.0"
-pygamer = "2.0.7"
 pdb2pqr = "3.6.2"
-xlsxwriter = "^3.1.9"
+pbj = "https://github.com/bem4solvation/pbj"
 
 [build-system]
 requires = ["poetry-core"]
