--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "xpinn for pbe"
+name = "xppbe"
 version = "1.0.0"
-description = "Phyisics Informed Neural Network code for Poisson-Boltzmann equation"
+description = "Extended Phyisics Informed Neural Network code for Poisson-Boltzmann equation"
 authors = ["martinachondo <martin.achondom@gmail.com>"]
 readme = "README.md"
 license = "MIT"
@@ -14,21 +14,23 @@ tensorflow = "2.10.0"
 scipy = "1.10.1"
 trimesh = "3.23.5"
 pygamer = "2.0.7"
-matplotlib = "3.6.1"
-plotly = "5.14.1"
-pandas = "2.0.2"
-xlsxwriter = "^3.1.9"
-tqdm = "4.64.1"
-ipykernel = "6.16.0"
 rtree = "1.0.1"
 numba = "0.57.0"
 meshio = "5.3.4"
 gmsh = "4.11.1"
 bempp-cl = "0.3.0"
 pdb2pqr = "3.6.2"
+matplotlib = "3.6.1"
+plotly = "5.14.1"
 pydotplus = "^2.0.2"
-pbj = "https://github.com/bem4solvation/pbj"
-graphviz = "https://gitlab.com/graphviz/graphviz/"
+pandas = "2.0.2"
+xlsxwriter = "^3.1.9"
+tqdm = "4.64.1"
+ipykernel = "6.16.0"
+
+[tool.poetry.optional-dependencies]
+pbj = {git = "https://github.com/bem4solvation/pbj"}
+graphviz = {git = "https://gitlab.com/graphviz/graphviz/"}
 
 [build-system]
 requires = ["poetry-core"]
