--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+        pip install .[pbe-standard]
         pip install pytest
 
     - name: Run tests
