--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,5 +23,11 @@ jobs:
         pip install .[pbe-standard]
         pip install pytest
 
+    - name: Check PYTHONPATH
+      run: echo $PYTHONPATH
+
+    - name: List installed packages
+      run: pip list
+
     - name: Run tests
       run: pytest -vv -c tests/pytest.ini
