--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,9 @@ data-processing = [
     "xlsxwriter==3.1.9"
 ]
 
-[tool.setuptools]
-packages = ["xppbe"]
+[tool.setuptools.packages.find]
+include = ["xppbe*"] 
+namespaces = false
 
 [project.urls]
 repository = "https://github.com/MartinAchondo/XPPBE"
