Scale output, pinns method: DVM DBM (beta mode) (#13)
* first implementation

* fixes

* fixes

* fixes

* fixes

* fixes

* fixes

* fixes

* fixes

* Gsolv direct

* implemented DBM

* fix

* fix

* fix

* fix

* fixes

* fixes

* Update Equations.py

* m

* DBM implemented

* fixes

* fixes

* fixes

* fixes

* tests

* fix

* fix

* fixes

* fixes

* Update test_xppbe.py

* Update Equations.py

* fix

* fix

* fix

* bugfix

* changes phi interface

* fix

* finally fixed

* dG_dn

* fix

* fix

* ready for testing

* postcode

* changes

* m

* order

* order

* order

* m

* m

* M

* m

* m

* m

* m

* m

* m

* m

---------

Co-authored-by: martinachondo <acho.martin@gmail.com>

--- a/xppbe/Simulation.yaml
+++ b/xppbe/Simulation.yaml
@@ -1,5 +1,7 @@
 # Simulation settings
 
+pinns_method: DCM
+
 # Equation to solve
 equation: regularized_scheme_2
 
@@ -67,6 +69,8 @@ hyperparameters_in:
     architecture_Net: FCNN
     fourier_features: true
     weight_factorization: false
+    scale_input: true
+    scale_output: false
 
 hyperparameters_out:
     input_shape: [null, 3]
@@ -78,9 +82,8 @@ hyperparameters_out:
     architecture_Net: FCNN
     fourier_features: true
     weight_factorization: false
-
-# Scale charges
-scale_NN_q: false
+    scale_input: true
+    scale_output: false
 
 # Optimizer properties
 optimizer: Adam
